# lua-smaz

./: CMakeLists.txt  README.markdown  test.lua
src/: lsmaz.c
